# taz

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: app.rc
installer/: taz-reader.iss
scripts/: build-installer.ps1  release.ps1
src/: database.rs  gui.rs  identity.rs  lib.rs  lingq.rs  main.rs  settings.rs  taz.rs
src/gui/: actions.rs  callbacks.rs  mod.rs  sync.rs
src/taz/: client.rs  extract.rs  models.rs  normalize.rs  sections.rs
ui/: app-window.slint
