[package]
name = "taz_lingq_tool"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.37", features = ["bundled"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.8"
webbrowser = "1.0"

[build-dependencies]
slint-build = "1.8"
